Corrected an overflow issue

--- a/src/chat/src/main/resources/static/css/styles.css
+++ b/src/chat/src/main/resources/static/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 .truncate-text {
     white-space: nowrap;
     overflow: hidden;
@@ -34,23 +38,29 @@
 .button-container {
     width: 100%;
 }
+
 .message {
     padding: 20px;
 }
+
 .message .message-button-container {
     display: none;
 }
+
 .message:hover {
     background-color: #def8fa;
 }
+
 .message:hover .message-button-container {
     display: block;
 }
+
 .announcement .message-text-container {
     margin: auto;
     text-align: center;
     font-style: italic;
 }
+
 .favorite {
     border: 1px solid orange;
 }
